fix: enhance StageCard header with expand/collapse functionality and update styles

--- a/src/pages/Projects/components/PlanSummary/PlanSummary.scss
+++ b/src/pages/Projects/components/PlanSummary/PlanSummary.scss
@@ -43,6 +43,20 @@
     flex-direction: column;
     gap: 8px;
   }
+
+  &-header {
+    display: flex;
+    align-items: center;
+    gap: 2px;
+
+    h5 {
+      margin: 0;
+    }
+
+    &-expandButton {
+      margin-top: 2px;
+    }
+  }
 }
 
 /* Widget Container */
@@ -50,21 +64,6 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
-}
-
-/* Header */
-.ppw-stage-header {
-  display: flex;
-  gap: 8px;
-  max-width: calc(100% - 80px);
-
-  & span {
-    margin-top: 1px;
-  }
-
-  & h5 {
-    margin: 0;
-  }
 }
 
 .ppw-stage-name {
